# orbitals

./: .flake.toml  .gitignore  README.md  analysis_example_output.txt  pyproject.toml  setup.cfg
.github/workflows/: build_python_versions.yml  publish_to_PyPI  publish_to_PyPI.yml
docs/: conf.py  index.rst
docs/_static/: Overview_figure.pptx
docs/_templates/: logo.html  star.html
scripts/: analysis_example.py  debug_script.py  densf_example.py  main.py  restricted_example.py  sfo_analysis.py  simple_example.py  unrestricted_example.py
shell_scripts/: orbital.sh
src/orb_analysis/: __init__.py  complex.py  custom_types.py  fragment.py  log_messages.py  main.py  orbital_functions.py  sfo.py
src/orb_analysis.egg-info/: PKG-INFO
src/orb_analysis/analyzer/: calc_analyzer.py
src/orb_analysis/complex/: complex.py  complex_data.py
src/orb_analysis/config/: config.toml  toml_config.py
src/orb_analysis/fa_calc/: complex.py
src/orb_analysis/fragment/: fragment.py  fragmentdata.py
src/orb_analysis/orb_functions/: mo_functions.py  orb_functions.py  sfo_functions.py
src/orb_analysis/orbital/: orbital.py  orbital_pair.py
src/orb_analysis/orbital_manager/: orb_manager.py  shared_functions.py
src/orb_analysis/sfo/: sfo.py
src/orb_visualization/: densf_presets.py  plotter.py
test/: test_restricted_calcanalyzer.py  test_sfo_functions.py  test_unrestricted_calcanalyzer.py
test/fixtures/: FrozenCoreInfo.xlsx  gross_pop_info.md
test/fixtures/output_files/: restricted_largecore_differentfragsym_c4v_full_full.out  restricted_largecore_fragsym_c3v_full.out  restricted_largecore_fragsym_c3v_nonrelativistic_full.out  restricted_largecore_nofragsym_nosym_full.out  restricted_nocore_fragsym_c3v_full.out  restricted_nocore_fragsym_nosym_full.out  unrestricted_largecore_fragsym_c3v_full.out  unrestricted_largecore_fragsym_c3v_unrelativistic_full.out  unrestricted_largecore_fragsym_nosym_full.out  unrestricted_largecore_nofragsym_nosym_full.out  unrestricted_nocore_fragsym_c3v_full.out  unrestricted_nocore_fragsym_nosym_full.out  unrestricted_nocore_nofragsym_c3v_full.out  unrestricted_nocore_nofragsym_nosym_full.out
test/fixtures/rkfs/: README.md  clean_up_rkf_files.py
workflows/: build_python_versions
(+1 files in other folders)
