# see: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = orb_analysis
author = Siebe Lekanne Deprez
author_email=s.j.lekanne.deprez@vu.nl
description = the package can be used for analysing fragment calculations with the AMS software package
readme = README.md
classifiers = [
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
dynamic = ["version"]
license = MIT

install_requires =
    gitpython
    numpy

[tool.setuptools-git-versioning]
enabled = true
template = {tag}
dev_template = {tag}
dirty_template = {tag}

[options]
package_dir=
    =src
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version>"3.8"

[options.packages.find]
where=src
exclude = 
    tests*
    docs*

[options.extras_require]
dev = 
    pytest
    sphinx