# see: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = orb_analysis
author = Siebe Lekanne Deprez
author_email=s.j.lekanne.deprez@vu.nl
description = the package can be used for analysing fragment calculations with the AMS software package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
dynamic = ["version"]
license = MIT


[tool.setuptools-git-versioning]
enabled = true
template = {tag}
dev_template = {tag}
dirty_template = {tag}

[options.entry_points]
console_scripts =
    orb_analysis = orb_analysis.main:main

[options]
package_dir=
    =src
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version > "3.10"
    numpy>=1.20.0
    gitpython>=3.1.24
    plams
    attrs>=21.2.0
    pandas>=1.4.0
    tabulate>=0.8.9

[options.packages.find]
where=src
exclude =
    /tests*
    /docs*

[options.extras_require]
dev =
    pytest
    sphinx
